Basit davet sayacı & davet eden kişiyi tespit etme
-Sunucuya üye katıldığında, davet eden kişinin sayacı artıyor.

-Davet silindiğinde veya oluşturulduğunda tespit edilip veri güncelleniyor

--- a/config.example
+++ b/config.example
@@ -5,7 +5,7 @@ module.exports = {
         status: "Made with ❤️ by Sanctus"
     },
 
-    guildId: "773550825008136212",
+    serverId: "773550825008136212",
 
     mongoURL: "",
 
