Özel url girişi kontrolünde değişiklikler
Özel url kullanıldığında, kullanım sayısını da mesajda yazdırılabilir

--- a/config..js.example
+++ b/config..js.example
@@ -15,7 +15,7 @@ module.exports = {
 
     text: {
         joinMessage: "**{newMember} sunucuya katıldı.**\nDavet eden: {inviter} ( {inviteCount} Davet )",
-        vaintyJoinMessage: "**{newMember} sunucuya katıldı.**\nÖzel url'yi kullanarak katıldı.",
+        vaintyJoinMessage: "**{newMember} sunucuya katıldı.**\nÖzel url'yi kullanarak katıldı. ( {vanityUses} )",
         leaveMessage: "**{member} sunucudan ayrıldı.**"
     }
 };
